syntax = "proto3";

option csharp_namespace = "Nyris.Crdt.GrpcServiceSample";

package GrpcServiceSample;

// The greeting service definition.
service Api {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
